# eirel-ai

./: .dockerignore  .env.compose.example  .env.host.example  .env.validator.example  .gitignore  Dockerfile  Dockerfile.local  README.md  README.validator.md  docker-compose.validator.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
control_plane/owner_api/: __init__.py  _constants.py  _helpers.py  app.py  baremetal_inventory.py  dataset_loader.py  dependencies.py  fee_verifier.py  managed.py  schemas.py
data/calibration/: .gitkeep
deploy/baremetal/: ansible.cfg
deploy/k8s/: README.md  kustomization.yaml
docs/: miner-guide.md  validator-guide.md
infra/ansible/: ansible.cfg  inventory.example.yml
infra/miner_runtime/: Makefile  __init__.py  _k8s_helpers.py  baremetal_runtime_manager.py  remote_command.py  runtime_manager.py
local/: inventory.yaml.example
monitoring/alertmanager/: README.md  alertmanager.yml
monitoring/discord-bridge/: Dockerfile  bridge.py
monitoring/kube-state-metrics/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
monitoring/node-exporter/: daemonset.yaml  kustomization.yaml
monitoring/prometheus/: prometheus.yml
orchestration/consumer_api/: __init__.py  chat.py  main.py  mcp_routes.py
orchestration/execution_worker/: main.py  worker.py  workflow_worker.py
orchestration/orchestrator/: chat_stream.py  composition_planner.py  conversation_summarizer.py  document_extractor.py  embedding_client.py  execution_coordinator.py  family_selection.py  family_selector.py  graph_executor.py  graph_orchestrator.py  graph_plan.py  main.py  mcp_dispatcher.py  miner_picker.py  orchestrator.py  product_orchestrator.py  project_memory.py  safety_pipeline.py  serving_picker.py  user_memory.py
shared/benchmark/: __init__.py  _invocation.py  _judge.py  _media.py  _orchestration.py  catalog.py  run.py  traffic_sampler.py
shared/common/: __init__.py  artifacts.py  bittensor_signing.py  chain_queries.py  circuit_breaker.py  config.py  database.py  db_migrate.py  enums.py  exceptions.py  execution_store.py  http_control.py  manifest.py  metagraph.py  migrations.py  miner_client.py  models.py  registry.py  (+9 more)
tests/: __init__.py  conftest.py  staging_validation.py  test_miner_sdk.py  test_staging_validation.py
tool_platforms/: _charge_tool.py  _record_tool_call.py
(+375 files in other folders)
