[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eirel-ai"
version = "0.1.0"
description = "Orchestrator, owner API, validator engine, and consumer API for the EIREL subnet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1,<0.23",
    "asyncpg>=0.31.0,<0.32",
    "bittensor==9.12.2",
    "beautifulsoup4>=4.12.3,<5",
    "boto3>=1.40.18,<2",
    "eirel>=0.2.0,<1",
    "fastapi~=0.110.1",
    "httpx>=0.28.1,<1",
    "prometheus-client>=0.20.0,<1",
    "pydantic>=2.12.5,<3",
    "psycopg[binary]>=3.2.10,<4",
    "python-multipart>=0.0.22,<0.0.23",
    "pyyaml>=6.0.1,<7",
    "redis>=7.3.0,<8",
    "sqlalchemy>=2.0.48,<3",
    "uvicorn>=0.41.0,<0.42",
    "kubernetes>=30.1.0",
]

[project.optional-dependencies]
tracing = [
    "opentelemetry-api>=1.25.0,<2",
    "opentelemetry-sdk>=1.25.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0,<2",
]
dev = [
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "moto[s3]>=5.0.0,<6",
    "fakeredis>=2.26.0,<3",
]

[project.scripts]
# Core services
orchestrator = "orchestration.orchestrator.main:main"
consumer-chat-api = "orchestration.consumer_api.main:main"
execution-worker = "orchestration.execution_worker.main:main"
owner-api = "control_plane.owner_api.app:main"
validator-engine = "validation.validator.main:main"
metagraph-listener = "validation.metagraph_listener.main:main"
weight-setter = "validation.weight_setter.main:main"

# Supporting services
web-search-tool-service = "tool_platforms.web_search_tool_service.app:main"
x-tool-service = "tool_platforms.x_tool_service.app:main"
semantic-scholar-tool-service = "tool_platforms.semantic_scholar_tool_service.app:main"
sandbox-tool-service = "tool_platforms.sandbox_tool_service.app:main"
eirel-provider-proxy = "tool_platforms.provider_proxy.main:main"

# CLI tools
db-migrate = "shared.common.db_migrate:main"
eirel-dataset-forge = "shared.dataset_forge.cli:main"
eirel-admin = "control_plane.owner_api.cli.admin:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "shared*",
    "control_plane*",
    "validation*",
    "orchestration*",
    "tool_platforms*",
    "infra*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
